--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://bitbucket.org/Daywalker04/base_framework_ts#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "compression": "^1.8.0",
     "cookie-parser": "^1.4.7",
@@ -30,10 +31,12 @@
     "helmet": "^8.1.0",
     "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
+    "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.5",
     "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.8",
