--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ MYSQL_USER="root"
 MYSQL_PASS="Bladeelpoderoso04!"
 MYSQL_DATABASE="coordinadora"
 MYSQL_PORT=3306
+SALTORROUNDS=10
+CIPHER_ALGORITH='RS256'
+SECRET_KEY_JWT='2j)y-PzTfu29'
+EXPIRATION_TIME_JWT='24h'
