Integracion de SSL y logs para debug

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-NODE_ENV="development"; //development or production
-PORT=3000; //Port number
-CASE_SENSITIVE="false"; //false or true
+NODE_ENV="development"
+PORT=3000
+CASE_SENSITIVE="false"
 MYSQL_HOST="localhost"
 MYSQL_USER="root"
 MYSQL_PASS="Bladeelpoderoso04!"
@@ -10,3 +10,7 @@ SALTORROUNDS=10
 CIPHER_ALGORITH='RS256'
 SECRET_KEY_JWT='2j)y-PzTfu29'
 EXPIRATION_TIME_JWT='24h'
+SSL_KEY=''
+SSL_CERT=''
+SSL_CA=''
+SSL_DHPARAM=''
