--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^2.2.0",
     "compression": "^1.8.0",
     "cookie-parser": "^1.4.7",
+    "date-fns": "^4.1.0",
     "debug": "^4.4.0",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
